--- a/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
@@ -71,7 +71,7 @@
             <div class="card shadow-lg p-3 bg-white rounded">
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-cell-border" id="preschooler_bmi"  style="min-height: 400px;">
+                    <table class="table table-hover table-cell-border" id="preschooler_bmi" >
                         <thead>
                             <tr style="text-align: center;">
                                 <th scope="col">No.</th>
@@ -128,8 +128,6 @@
         </div>
     </div>
 </div>
-    <hr>
-    <br>
 
     <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
