--- a/ppms_project/profilingApp/templates/activities/Admin - barangay.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - barangay.html
@@ -153,15 +153,15 @@
                     <form method="POST">
                         {% csrf_token %}
                         <div class="md-form">
-                            <label id="user-lbl" data-error="wrong" data-success="right">Barangay Name: </label>
+                            <label id="user-lbl" data-error="wrong" data-success="right" aria-required="true">Barangay Name: </label>
                             {{ form.brgy_name }}
                         </div>
                         <div class="md-form">
-                            <label id="user-lbl" data-error="wrong" data-success="right">Barangay Phone Number: </label>
+                            <label id="user-lbl" data-error="wrong" data-success="right" aria-required="true">Barangay Phone Number: </label>
                             {{ form.brgy_phone }}
                         </div>
                         <div class="md-form">
-                            <label id="user-lbl" data-error="wrong" data-success="right">Barangay Hall Address: </label>
+                            <label id="user-lbl" data-error="wrong" data-success="right" aria-required="true">Barangay Hall Address: </label>
                             {{ form.brgy_address }}
                         </div>
                         
