--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -55,7 +55,7 @@
             <section>
                 <div class="row">
                     <div class="col-md-5 col-12 mb-4 mb-md-3">
-                        <div class="card d-flex align-items-stretch flex-column" style="min-height: 645px;">
+                        <div class="card d-flex align-items-stretch flex-column" >
                             <div class="card-header">
                                 <h4 class=" mx-1 my-1">Preschooler Details</h4>
                             </div>
