--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
@@ -123,6 +123,7 @@
         <div class="row d-flex align-items-stretch">
                 <div class="col-md mb-2">
                 <div class="card shadow-sm bg-white rounded h-100">
+                        <!-- <div class="card-header" style="background-color: rgb(0, 165, 79) !important;"> -->
                         <div class="card-header">
                             <h4 class="card-title">Normal</h4>
                         </div>
@@ -133,6 +134,7 @@
                 </div>
                 <div class="col-md mb-2">
                     <div class="card shadow-sm bg-white rounded h-100">
+                        <!-- <div class="card-header" style="background-color: rgb(233, 221, 0) !important;"> -->
                         <div class="card-header">
                             <h4 class="card-title">Wasted</h4>
                         </div>
@@ -143,7 +145,8 @@
                 </div>
                 <div class="col-md mb-2">
                     <div class="card shadow-sm bg-white rounded h-100 ">
-                        <div class="card-header ">
+                        <!-- <div class="card-header " style="background-color: rgb(238, 29, 35) !important;"> -->
+                        <div class="card-header">
                             <h4 class="card-title">Severly Wasted</h4>
                         </div>
                         <div class="card-body text-center">
@@ -153,18 +156,9 @@
                 </div>
                 <div class="col-md mb-2">
                     <div class="card shadow-sm bg-white rounded h-100 ">
+                        <!-- <div class="card-header" style="background-color: rgb(242, 98, 33)!important;"> -->
                         <div class="card-header">
-                            <h4 class="card-title">Overweight</h4>
-                        </div>
-                        <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ overobese }}</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md mb-2">
-                    <div class="card shadow-sm bg-white rounded h-100 ">
-                        <div class="card-header">
-                            <h4 class="card-title">Obese</h4>
+                            <h4 class="card-title">Overweight/Obese</h4>
                         </div>
                         <div class="card-body text-center">
                             <p style="font-size: xx-large;" class="card-text">{{ overobese }}</p>
@@ -215,7 +209,7 @@
         }
     },
     data:{
-        labels: ["Normal", "Wasted", "Severly Wasted","Overweight","Obese"],
+        labels: ["Normal", "Wasted", "Severly Wasted","Overweight"],
         datasets: [{
                 label: 'Normal',
                 data: data_count,
@@ -224,14 +218,12 @@
                 'rgb(255, 241, 2)',
                 'rgb(238, 29, 35)',
                 'rgb(242, 98, 33)',
-                'rgb(0,0,0, 0.2)',
                 ],
                 borderColor: [
                 'rgb(0, 165, 79)',
                 'rgb(255, 241, 2)',
                 'rgb(238, 29, 35)',
-                'rgb(242, 98, 33)',
-                'rgb(0,0,0,)',,
+                'rgb(242, 98, 33)',,
                 ],
                 borderWidth: 1
             }
