--- a/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
@@ -81,7 +81,7 @@
                                 <th scope="col">Suffix</th>
                                 <th scope="col">Birthdate</th>
                                 <th scope="col">Age in months</th>
-                                <th scope="col">WHFA STATUS</th>
+                                <th scope="col">BMI STATUS</th>
                                 <th scope="col" class="nosort text-center">Action</th>
                             </tr>   
                         </thead>
@@ -101,18 +101,18 @@
                                 {% endif %}
                                 <td>{{ preschooler.birthday }}</td>
                                 <td>{{ preschooler.age_months }}</td>
-                                {% if preschooler.whfa is None %}
+                                {% if preschooler.bmifa is None %}
                                     
                                     <td> No Data Record </td>
                                     
-                                {% elif preschooler.whfa > 2.0 %}
-                                    <td> Overweight/Obese ({{preschooler.whfa}})</td>
-                                {% elif preschooler.whfa >= -2.0 and preschooler.whfa <= 2.0 %}
-                                    <td> Normal ({{preschooler.whfa}})</td>
-                                {% elif preschooler.whfa >= -3.0 and preschooler.whfa <= -2.0 %}
-                                    <td> Wasted ({{preschooler.whfa}})</td>
+                                {% elif preschooler.bmifa > 2.0 %}
+                                    <td style="color: rgb(242, 98, 33);"> Overweight/Obese ({{ preschooler.bmifa }})</td>
+                                {% elif preschooler.bmifa >= -2.0 and preschooler.bmifa <= 2.0 %}
+                                    <td style="color: rgb(0, 165, 79);"> Normal ({{ preschooler.bmifa}})</td>
+                                {% elif preschooler.bmifa >= -3.0 and preschooler.bmifa <= -2.0 %}
+                                    <td style="color: rgb(255, 241, 2);"> Wasted ({{ preschooler.bmifa }})</td>
                                 {% else %}
-                                    <td> Severely Wasted ({{preschooler.whfa}})</td>
+                                    <td style="color: rgb(238, 29, 35);"> Severely Wasted ({{preschooler.bmifa }})</td>
                                 {% endif %}
                                 <td style="text-align: center;">
                                     <div>
