--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
@@ -157,7 +157,7 @@
                 <div class="col-md mb-2">
                     <div class="card shadow-sm bg-white rounded h-100 ">
                         <!-- <div class="card-header" style="background-color: rgb(242, 98, 33)!important;"> -->
-                        <div class="card-header">
+                            <div class="card-header">
                             <h4 class="card-title">Overweight/Obese</h4>
                         </div>
                         <div class="card-body text-center">
@@ -209,7 +209,7 @@
         }
     },
     data:{
-        labels: ["Normal", "Wasted", "Severly Wasted","Overweight"],
+        labels: ["Normal", "Wasted", "Severly Wasted","Overweight/Obese"],
         datasets: [{
                 label: 'Normal',
                 data: data_count,
