--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler_barangay.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler_barangay.html
@@ -95,8 +95,9 @@
     <div class="container">
         <div class="container">
             <div class="row"> 
-                <div class="col-sm-8 mb-3 d-flex justify-content-sm-start justify-content-center">
-                    <h3>{{ brgy }} Preschooler Status Overview</h3>
+                <div class="col-sm-8 mb-3 d-sm-block text-sm-start text-center justify-content-sm-start justify-content-center">
+                    <h3> Preschooler Status Overview</h3>
+                    <h3>{{ brgy }}</h3>
                 </div>
                 <div class="col-sm-4  mb-3 d-flex justify-content-sm-end justify-content-center">
                     <div class="card text-right  shadow-sm" style="width: 10rem;">
@@ -117,7 +118,7 @@
             </div>
         </div>
             <div class="row d-flex align-items-stretch">
-            <div class="col-md mb-2">
+            <div class="col-xl-3 col-md-6 mb-2">
                 <div class="card shadow-sm bg-white rounded h-100">
                         <div class="card-header">
                             <h4 class="card-title">Normal</h4>
@@ -127,7 +128,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md mb-2">
+                <div class="col-xl-3 col-md-6 mb-2">
                     <div class="card shadow-sm bg-white rounded h-100">
                         <div class="card-header">
                             <h4 class="card-title">Wasted</h4>
@@ -137,7 +138,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md mb-2">
+                <div class="col-xl-3 col-md-6 mb-2">
                     <div class="card shadow-sm bg-white rounded h-100 ">
                         <div class="card-header ">
                             <h4 class="card-title">Severly Wasted</h4>
@@ -147,20 +148,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md mb-2">
+                <div class="col-xl-3 col-md-6 mb-2">
                     <div class="card shadow-sm bg-white rounded h-100 ">
                         <div class="card-header">
-                            <h4 class="card-title">Overweight</h4>
-                        </div>
-                        <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ overobese }}</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md mb-2">
-                    <div class="card shadow-sm bg-white rounded h-100 ">
-                        <div class="card-header">
-                            <h4 class="card-title">Obese</h4>
+                            <h4 class="card-title">Overweight/Obese</h4>
                         </div>
                         <div class="card-body text-center">
                             <p style="font-size: xx-large;" class="card-text">{{ overobese }}</p>
@@ -211,7 +202,7 @@
         }
     },
     data:{
-        labels: ["Normal", "Wasted", "Severly Wasted","Overweight","Obese"],
+        labels: ["Normal", "Wasted", "Severly Wasted","Overweight/Obese"],
         datasets: [{
                 label: 'Normal',
                 data: data_count,
@@ -220,14 +211,12 @@
                 'rgb(255, 241, 2)',
                 'rgb(238, 29, 35)',
                 'rgb(242, 98, 33)',
-                'rgb(0,0,0, 0.2)',
                 ],
                 borderColor: [
                 'rgb(0, 165, 79)',
                 'rgb(255, 241, 2)',
                 'rgb(238, 29, 35)',
-                'rgb(242, 98, 33)',
-                'rgb(0,0,0,)',,
+                'rgb(242, 98, 33)',,
                 ],
                 borderWidth: 1
             }
