--- a/ppms_project/profilingApp/templates/activities/Admin - barangay.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - barangay.html
@@ -174,7 +174,7 @@
             </div>
         </div>
     </div>
-
+</div>
     <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
     <script>
@@ -195,4 +195,5 @@
                 this.data(i++);
             });}).draw();
     </script>
+
 {% endblock %}
