--- a/ppms_project/profilingApp/templates/activities/Admin - Set Password.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Set Password.html
@@ -14,104 +14,50 @@
 
     <title>City of Dasmariñas</title>
     <!-- Header -->
-    <div class="site-header" id="header">
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled border-bottom" id="header">
-            <div class="container-fluid">
-                <div>
-                    <a href="#" class="name" style="text-decoration: none;">
-                        <img class="navbar-icon" style="margin-left:15px;" src="{% static '/Media/avatar.png' %}" alt="dasma-logo">
-                        <span id="hidetitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas</span>
-                    </a>
-                </div>
-            </div>
-        </nav>
-    </div>
 </head>
 
-<body>
+<body class="mt-0 mb-0 d-flex align-items-stretch" style="background-color: black;">
     <!-- Dashboard -->
-    <div id="grid" class="container-fluid">
-        <div class="container-grid" style="padding: 5%;">
+    <div id="grid" class="container-fluid mt-0" >
+        <div class="container-grid" style="padding: 10% 5% 5% 5%;">
+            <div class="card" style="margin-left:30%; margin-right:30%;">
 
-            <!-- Spacing --> <br><br><br><br>
-            <h4 class="d-flex fas fa-clipboard-check justify-content-center">Set Password</h4>
-            <hr style="background-color: white;">
+            <div class="card-header">
+            <h4 class="d-flex justify-content-center"><i class="fas fa-clipboard-check mx-2"></i> Set Password</h4>
+            
+            </div>
             <form action="" method="POST">
                 {% csrf_token %}
-                <div class="md-form">
+            <div class="card-body p-4">
+                <div class="md-form justify-content-center d-flex">
+                    
+                    <div class="row d-block justify-content-center align-items-center">
+                        <div class="d-flex justify-content-center">
+                            <p style="margin-right:2%;">Set new password for </p> 
+                            <p class="fw-bold"> {{ user.first_name }} {{ user.last_name }} </p>
+                        </div>
+                        <hr>    
+                        <div class="col md-form p-2 d-flex justify-content-end">
+                            <label class="mx-2"id="user-lbl" data-error="wrong" data-success="right">New Password: </label>
+                            {{ form.new_password1 }}
                             
-                    <div class="md-form">
-                        <label id="user-lbl" data-error="wrong" data-success="right">New Password: </label>
-                        {{ form.new_password1 }}
-                    </div>
-                    <div class="md-form">
-                        <label id="user-lbl" data-error="wrong" data-success="right">Confirm New Password: </label>
-                        {{ form.new_password2 }}
+                        </div>
+                        <div class="col md-form p-2 d-flex">
+                            <label class="mx-2" id="user-lbl" data-error="wrong" data-success="right">Confirm New Password: </label>
+                            {{ form.new_password2 }}
+                        </div>
+    
                     </div>
                 </div>
-
-                <div class="d-flex justify-content-center">
-                    <input class="btn btn-primary px-3" type="submit" name="Confirm" value="Reset" style="margin-right: 2%; background-color: rgb(44, 95, 34);">
+            </div>
+            <div class="card-footer">
+                <div class="d-flex justify-content-end">
                     <a href="{% url 'admin_userAccounts' %}"><button type="button" style="background-color: #EF3A25; color: white;" class="btn">Cancel</button></a>
+                    <input class="btn btn-primary px-3" type="submit" name="Confirm" value="Reset" style="margin-left: 1%; background-color: rgb(44, 95, 34);">
                 </div>
+            </div>
             </form>
         </div>
-    </div>
-         
-    </div>
-    <!-- Footer -->
-    <div class="site-footer" id="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4">
-                    <h2 class="footer-heading mb-4">About</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Modi cumque tenetur inventore veniam, hic vel ipsa necessitatibus 
-                        ducimus architecto fugiat!
-                    </p>
-                    <div class="my-5">
-                        <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-                        <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                        <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                        <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
-                    </div>
-                </div>
-                <div class="col-lg-8">
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <h2 class="footer-heading mb-4">Quick Links</h2>
-                            <ul class="list-unstyled">
-                            <li><a href="#">FAQs</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-4">
-                            <h2 class="footer-heading mb-4">Helpful Link</h2>
-                            <ul class="list-unstyled">
-                            <li><a href="#">Healthcare Professional</a></li>
-                            <li><a href="#">LGU Facilities</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-4">
-                            <h2 class="footer-heading mb-4">Resources</h2>
-                            <ul class="list-unstyled">
-                            <li><a href="#">NNC Website</a></li>
-                            <li><a href="#">DOH Website</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-12">
-                    <div class="border-top pt-5">
-                        <p class="copyright"><small>
-                        Copyright ©<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart text-danger" aria-hidden="true"></i>
-                        </small>
-                        </p>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </body>
