--- a/ppms_project/profilingApp/templates/activities/Admin - barangay.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - barangay.html
@@ -147,7 +147,7 @@
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content">
                 <div class="modal-header" >
-                    <h5 class="modal-title fa fa-user-edit" id="exampleModalLabel">Enroll Preschooler</h5>
+                    <h5 class="modal-title fa fa-user-edit" id="exampleModalLabel">Add Barangay</h5>
                 </div>
                 <div class="modal-body mx-4">
                     <form method="POST">
