--- a/ppms_project/profilingApp/templates/activities/Admin - Validation.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Validation.html
@@ -51,7 +51,7 @@
                         </li>
                         <li>
                             <a href="{% url 'admin_userAccounts' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
-                            title="User accounts">
+                            title="User Accounts">
                             <i class="fa fa-3x fa-fw fas fa-users " style="font-size: 24px;"></i>
                             </a>
                         </li>
