Error msg in Reset pass

--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -298,8 +298,8 @@
             <script>
                 Swal.fire({
                     icon: 'success',
-                    title: '{{message}}',
-                    text: 'Account successfully created.',
+                    title: 'Account successfully created.',
+                    text: '{{message}}',
                     confirmButtonText: "Ok",
                     confirmButtonColor: '#EF3A25',
                 }).then(function() {
