--- a/ppms_project/profilingApp/templates/activities/Admin - Set Password.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Set Password.html
@@ -61,4 +61,35 @@
         </div>
     </div>
 </body>
+
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+{% if messages %}
+    {% for message in messages %}
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR  %}
+            <script>
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Reset password failed.',
+                    text: '{{message}}',
+                    confirmButtonText: "Ok",
+                    confirmButtonColor: '#EF3A25',
+                });
+            </script>
+        {% else %}
+            <script>
+                Swal.fire({
+                    icon: 'success',
+                    title: 'Password reset successfully.',
+                    text: '{{message}}',
+                    confirmButtonText: "Ok",
+                    confirmButtonColor: '#EF3A25',
+                }).then(function() {
+                    window.location = "{% url 'admin_userAccounts' %}";
+                });
+            </script>
+        {% endif %}
+    {% endfor %}
+{% endif %}
     
