User Profile update

--- a/ppms_project/profilingApp/templates/activities/BHW Home.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Home.html
@@ -71,7 +71,7 @@
                                              </div>
                                         </div>
                                     </div>
-                                    <a class="card-footer d-flex align-items-center justify-content-center" style="height:30px;" href="{% url 'new_pass' user.id %}">
+                                    <a class="card-footer d-flex align-items-center justify-content-center" style="height:30px;" href="{% url 'n' user.id %}">
                                         <p class="mt-3"style="font-size:15px;">View Profile</p>
                                     </a>
                                 </div>
