--- a/ppms_project/profilingApp/templates/activities/BHW Immunization Status.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Immunization Status.html
@@ -44,21 +44,20 @@
 
 <!-- Dashboard -->
 <div id="grid" class="container-fluid" style="padding:3%; margin: top 65px;">
-    <div class="container-grid">
+    <div class="container-grid p-4">
         <div class="">
             <div class="row"> 
                 <div class="col">
                     <h3 style="text-align:left;">Preschoolers Immunization</h3>
                 </div>
             </div>
-        <hr>
-        <br>
+        <hr>    
         </div>
     </div>
     <!--------------------- DataTables --------------------->
     <div class="text-black">
         <div class="row">
-            <div class="col">
+            <div class="col p-4">
                 <div class="card-header">
                     <h3> Immunization Schedule</h3>
                 </div>
